# pptx-replace

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
pptx_replace/: __init__.py  pptx.py  preplace.py  replace_core.py  text.py  utils.py
tests/: test_pptx_replace.py
